--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-footer-comp": "^3.0.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
